# skilltree

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/: manifest.webmanifest
public/models/old-open-book/: README.md
scripts/: Start-NeuralSkillTree.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/chamber/: BookOpenTransition.tsx  Bookshelf.tsx  BookshelfLibrary.tsx  CanvasCard.tsx  CanvasView.tsx  ChamberSidebar.tsx  ChamberTopBar.tsx  DocumentCard.tsx  DocumentLibrary.tsx  DocumentReader.tsx  EmptyChamberState.tsx  EmptyShelfState.tsx  FullscreenReader.tsx  ImmersiveDocumentReader.tsx  KnowledgeChamberPage.tsx  KnowledgeChamberTopBar.tsx  LibraryView.tsx  NoteReaderEditor.tsx  PDFReader.tsx  PdfReaderView.tsx  PdfUploadButton.tsx  SettingsPanel.tsx  ShelfBook.tsx  ShelfRow.tsx  UploadPdfButton.tsx
src/components/skill-tree/: AddOrbPanel.tsx  CameraRig.tsx  ColorPicker.tsx  ConnectionLines.tsx  CoreOrb.tsx  FloatingBookArchive.tsx  HolographicBookLabels.tsx  KnowledgeOrb.tsx  OpenBookModel.tsx  OrbDetailsPanel.tsx  OrbGlow.tsx  OrbInteriorView.tsx  ParticleField.tsx  SearchOverlay.tsx  SectionMenu.tsx  SkillTreePage.tsx  SkillTreeScene.tsx  TopToolbar.tsx
src/data/: demoData.ts
src/store/: useKnowledgeStore.ts
src/styles/: global.css
src/types/: models.ts
src/utils/: blobStore.ts  colors.ts  geometry.ts  localVault.ts  navigationSensitivity.ts
