[package]
name = "skilltree"
version = "0.1.0"
description = "A futuristic personal 3D knowledge universe."
authors = ["autemadmn"]
edition = "2021"
repository = "https://github.com/autemadmn/skilltree"
rust-version = "1.77.2"

[lib]
name = "skilltree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
